# c-tensor

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c.yml
examples/main/: CMakeLists.txt  main.c
examples/names/: CMakeLists.txt  README.md  main.c
examples/xor/: CMakeLists.txt  main.c
include/tensor/: base.h  csv.h  math.h  string.h  tensor.h
old/: CMakeLists.txt  string_old.c_old  tokens.c
src/: tensor_private.h
src/base/: CMakeLists.txt  debug.c  hashmap.c  hashmap.h  pool.c  pool.h
src/csv/: CMakeLists.txt  csv.c
src/math/: CMakeLists.txt  rand.c  rand.h  sum.c  sum.h
src/string/: CMakeLists.txt  args.c  args.h  csv.c  csv.h  hash.c  hash.h  hashmap.h  string.c  string.h  tensor.c  tensor.h  token.c  token.h
src/tensor/: CMakeLists.txt  cast.c  cast.h  debug.h  graph.c  graph.h  hashmap.c  hashmap.h  mul.c  mul.h  pool.c  pool.h  private.h  scalar.c  string.c  string.h  tensor.c  tensor.h  vector.c
test/tensor/: CMakeLists.txt  csv.c  main.c  pool.c  scalar.c  string.c  test.h
tests/base/: CMakeLists.txt  hashmap.c  main.c  pool.c
tests/math/: CMakeLists.txt  main.c  rand.c  sum.c
tests/string/: CMakeLists.txt  args.c  csv.c  hash.c  main.c  string.c  tensor.c  token.c
tests/tensor/: CMakeLists.txt  csv.c  main.c  scalar.c  tensor.c  vector.c
